// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScreenHeader > renders a back button when onBack is supplied 1`] = `
<rn-View
  className="gap-3"
>
  <rn-View
    className="min-h-touch flex-row items-center gap-3"
  >
    <rn-Pressable
      accessibilityLabel="Back to Projects"
      accessibilityRole="button"
      className="flex-row items-center justify-center rounded-md border border-border bg-card active:opacity-90 min-h-touch py-3 px-4"
      disabled={false}
      onPress={[Function]}
      style={
        [
          {
            "elevation": 2,
            "shadowColor": "#1a1a2e",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.08,
            "shadowRadius": 8,
          },
          undefined,
        ]
      }
      testID="btn-back"
    >
      <lucide-ArrowLeft
        color="#2d3a5a"
        size={16}
      />
    </rn-Pressable>
    <rn-Text
      className="min-w-0 flex-1 text-title-sm text-foreground"
      ellipsizeMode="tail"
      numberOfLines={1}
      testID="screen-header-title"
    >
      Detail
    </rn-Text>
    <rn-View
      className="shrink-0 flex-row items-center gap-2"
    />
  </rn-View>
</rn-View>
`;

exports[`ScreenHeader > renders a bare title-only header 1`] = `
<rn-View
  className="gap-3"
>
  <rn-View
    className="min-h-touch flex-row items-center gap-3"
  >
    <rn-Text
      className="min-w-0 flex-1 text-title-sm text-foreground"
      ellipsizeMode="tail"
      numberOfLines={1}
      testID="screen-header-title"
    >
      Reports
    </rn-Text>
    <rn-View
      className="shrink-0 flex-row items-center gap-2"
    />
  </rn-View>
</rn-View>
`;

exports[`ScreenHeader > renders eyebrow + subtitle when supplied 1`] = `
<rn-View
  className="gap-3"
>
  <rn-View
    className="min-h-touch flex-row items-center gap-3"
  >
    <rn-Text
      className="min-w-0 flex-1 text-title-sm text-foreground"
      ellipsizeMode="tail"
      numberOfLines={1}
      testID="screen-header-title"
    >
      Projects
    </rn-Text>
    <rn-View
      className="shrink-0 flex-row items-center gap-2"
    />
  </rn-View>
  <rn-View
    className="gap-1"
  >
    <rn-Text
      className="text-label text-muted-foreground"
      selectable={true}
    >
      ALL
    </rn-Text>
    <rn-Text
      className="text-body text-muted-foreground"
      selectable={true}
    >
      3 active, 12 archived
    </rn-Text>
  </rn-View>
</rn-View>
`;
